--- a/game.html
+++ b/game.html
@@ -65,67 +65,7 @@
 							<div class="header__catalog__head__title">Жанры</div>
 							<div class="header__catalog__head__more">Показать все</div>
 						</div>
-						<div class="header__catalog__navs__genres__list">
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-shooter" onmouseover="change_game_category('shooter')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g5" onmouseover="change_game_category('g5')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g3" onmouseover="change_game_category('g3')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g7" onmouseover="change_game_category('g7')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g6" onmouseover="change_game_category('g6')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g1" onmouseover="change_game_category('g1')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g2" onmouseover="change_game_category('g2')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-horror" onmouseover="change_game_category('horror')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g9" onmouseover="change_game_category('g9')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g10" onmouseover="change_game_category('g10')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g11" onmouseover="change_game_category('g11')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__genres__list__genre header__catalog__navs__nav" id="header__catalog__nav-g12" onmouseover="change_game_category('g12')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__genres__list__genre__icon"><img src="img/icons/ganres/6.svg" alt=""></div>
-								<div class="header__catalog__navs__genres__list__genre__title txt">Экшен</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
+						<div class="header__catalog__navs__genres__list" id="list_genres_HC">
 						</div>
 					</div>
 					<div class="header__catalog__navs__authors">
@@ -133,77 +73,7 @@
 							<div class="header__catalog__head__title">Издатели и разработчики</div>
 							<div class="header__catalog__head__more">Показать все</div>
 						</div>
-						<div class="header__catalog__navs__authors__list">
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-Activision" onmouseover="change_game_category('Activision')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p1" onmouseover="change_game_category('p1')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p2" onmouseover="change_game_category('p2')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p3" onmouseover="change_game_category('p3')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p4" onmouseover="change_game_category('p4')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p5" onmouseover="change_game_category('p5')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p6" onmouseover="change_game_category('p6')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p7" onmouseover="change_game_category('p7')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p8" onmouseover="change_game_category('p8')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
-							<div class="header__catalog__navs__authors__list__author header__catalog__navs__nav" id="header__catalog__nav-p9" onmouseover="change_game_category('p9')" onmouseout="stop_change_game_category()">
-								<div class="header__catalog__navs__authors__list__author__img">
-									<img src="img/logos/authors/Activision.svg" alt="">
-								</div>
-								<div class="header__catalog__navs__authors__list__author__title txt">Activision</div>
-								<div class="header__catalog__navs__indicator"></div>
-							</div>
+						<div class="header__catalog__navs__authors__list" id="list_authors_HC">
 						</div>
 					</div>
 				</div>
@@ -375,35 +245,49 @@
         </div>
         <div class="mainInfo">
             <div class="mainInfo__banner mainInfo__banner_loading loadingContent">
-                <!-- <div class="mainInfo__banner__discount txt">52%</div> -->
-                <div class="mainInfo__banner__imgBlock"><img src="" alt="" id="game_img"></div>
-                <div class="mainInfo__banner__playButton absolute-zero flex-center" onclick="play_pause_treiler()">
-                    <div class="mainInfo__banner__playButton__icon">
-                        <img src="img/icons/play-button64.png" alt="">
-                    </div>
-                    <div class="mainInfo__banner__playButton__text txt">Смотреть трейлер</div>
-                </div>
-                <div class="mainInfo__banner__treilerBlock absolute-zero">
-                    <video src="" id="treiler" loop></video>
-                    <div class="mainInfo__banner__treilerBlock__interface">
-                        <div class="mainInfo__banner__treilerBlock__interface__button mainInfo__banner__treilerBlock__interface__button_hover" onclick="play_pause_treiler()">
-                            <img src="img/icons/pause24.png" alt="" id="button_icon_play_pause">
-                        </div>
-                        <div class="mainInfo__banner__treilerBlock__interface__race" id="race">
-                            <div class="mainInfo__banner__treilerBlock__interface__race__valueRace" id="value_race"></div>
-                            <div class="mainInfo__banner__treilerBlock__interface__race__hoverRace" id="hover_race"></div>
-                        </div>
-                        <div class="mainInfo__banner__treilerBlock__interface__button mainInfo__banner__treilerBlock__interface__button_volume">
-                            <img src="img/icons/volume24.png" alt="">
-                            <div class="mainInfo__banner__treilerBlock__interface__volumeRace" id="volume_race">
-                                <div class="mainInfo__banner__treilerBlock__interface__volumeRace__value" id="volume_race_value"></div>
-                            </div>
-                        </div>
-                        <div class="mainInfo__banner__treilerBlock__interface__button mainInfo__banner__treilerBlock__interface__button_hover">
-                            <img src="img/icons/fullscreen24.png" alt="">
-                        </div>
-                    </div>
-                </div>
+				<div class="mainInfo__banner__visual">
+					<div class="mainInfo__banner__imgBlock"><img src="" alt="" id="game_img"></div>
+				</div>
+				<div class="mainInfo__banner__interface">
+					<div class="mainInfo__banner__interface__top">
+						<div class="mainInfo__banner__interface__top__rating txt">
+							<div class="mainInfo__banner__interface__top__point mainInfo__banner__interface__top__point_steam">
+								<img src="img/icons/social/steam.png" alt="">
+								<div class="mainInfo__banner__interface__top__point__rating">70%</div>
+							</div>
+							<div class="mainInfo__banner__interface__top__point mainInfo__banner__interface__top__point_metacritic">
+								<img src="img/icons/social/m.png" alt="">
+								<div class="mainInfo__banner__interface__top__point__rating">4.7</div>
+							</div>
+						</div>
+						<div class="mainInfo__banner__interface__top__point mainInfo__banner__interface__top__point_preOrder txt">
+							<div class="mainInfo__banner__interface__top__point__key">Предзаказ</div>
+							<div class="mainInfo__banner__interface__top__point__value">03.04.2026</div>
+						</div>
+					</div>
+					<div class="mainInfo__banner__interface__bottom">
+						<div class="mainInfo__banner__interface__bottom__medialist">
+							<div class="mainInfo__banner__interface__bottom__medialist__media mainInfo__banner__interface__bottom__medialist__media_active" id="media_block-1" onclick="change_media('1')">
+								<img src="img/banners/1.jpg" alt="">
+							</div>
+							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-10" onclick="change_media('10')">
+								<img src="img/banners/10.jpg" alt="">
+							</div>
+							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-3" onclick="change_media('3')">
+								<img src="img/banners/3.jpg" alt="">
+							</div>
+							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-4" onclick="change_media('4')">
+								<img src="img/banners/4.jpg" alt="">
+							</div>
+							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-5" onclick="change_media('5')">
+								<img src="img/banners/5.jpg" alt="">
+							</div>
+							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-52nahuy" onclick="change_media('52nahuy')">
+								<img src="img/banners/52nahuy.jpg" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
             </div>
             <div class="mainInfo__info mainInfo__info_loading loadingContent" id="game_info">
                 <div>
