--- a/game.html
+++ b/game.html
@@ -237,6 +237,9 @@
 	<div class="blackoutBlock fixed-zero" onclick="open_catalogNavs()"></div>
     <div class="forScroll"></div>
 	<main id="main">
+		<div class="fullScreen" onclick="toggle_fullScreen()">
+			<img class="def-optimize_img" src="" alt="" id="fullScreen_img">
+		</div>
         <div class="bigImgBlock bigImgBlock_loading loadingContent">
             <div class="bigImgBlock__bg"></div>
             <div class="bigImgBlock__border"></div>
@@ -265,24 +268,46 @@
 						</div>
 					</div>
 					<div class="mainInfo__banner__interface__bottom">
-						<div class="mainInfo__banner__interface__bottom__medialist" id="game_medialist">
-							<div class="mainInfo__banner__interface__bottom__medialist__media mainInfo__banner__interface__bottom__medialist__media_active" id="media_block-1" onclick="change_media(false, '1')">
-								<img src="img/banners/1.jpg" alt="">
+						<div class="mainInfo__banner__interface__bottom__screenshotsIF">
+							<div class="mainInfo__banner__interface__bottom__screenshotsIF__arrows">
+								<button type="button" title="button" class="mainInfo__banner__interface__bottom__screenshotsIF__arrows__arrow" onclick="scroll_screenshots(-1)" id="screenshots_button_left">
+									<img src="img/icons/main/arrRight32.png" alt="">
+								</button>
+								<button type="button" title="button2" class="mainInfo__banner__interface__bottom__screenshotsIF__arrows__arrow" onclick="scroll_screenshots(1)" id="screenshots_button_right">
+									<img src="img/icons/main/arrRight32.png" alt="">
+								</button>
 							</div>
-							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-10" onclick="change_media(false, '10')">
-								<img src="img/banners/10.jpg" alt="">
+							<div class="mainInfo__banner__interface__bottom__screenshotsIF__buttonFullScreenBlock" id="buttonFullScreenBlock">
+								<button type="button" class="mainInfo__banner__interface__bottom__screenshotsIF__buttonFullScreenBlock__button" id="fullScreen_btn" title="full screen button" onclick="change_img_fullScreen('')">
+									<svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M23 4C23 2.34315 21.6569 1 20 1H16C15.4477 1 15 1.44772 15 2C15 2.55228 15.4477 3 16 3H20C20.5523 3 21 3.44772 21 4V8C21 8.55228 21.4477 9 22 9C22.5523 9 23 8.55228 23 8V4Z" fill="#fff"/>
+										<path d="M23 16C23 15.4477 22.5523 15 22 15C21.4477 15 21 15.4477 21 16V20C21 20.5523 20.5523 21 20 21H16C15.4477 21 15 21.4477 15 22C15 22.5523 15.4477 23 16 23H20C21.6569 23 23 21.6569 23 20V16Z" fill="#fff"/>
+										<path d="M4 21H8C8.55228 21 9 21.4477 9 22C9 22.5523 8.55228 23 8 23H4C2.34315 23 1 21.6569 1 20V16C1 15.4477 1.44772 15 2 15C2.55228 15 3 15.4477 3 16V20C3 20.5523 3.44772 21 4 21Z" fill="#fff"/>
+										<path d="M1 8C1 8.55228 1.44772 9 2 9C2.55228 9 3 8.55228 3 8L3 4C3 3.44772 3.44772 3 4 3H8C8.55228 3 9 2.55228 9 2C9 1.44772 8.55228 1 8 1H4C2.34315 1 1 2.34315 1 4V8Z" fill="#fff"/>
+									</svg>
+								</button>
 							</div>
-							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-3" onclick="change_media(false, '3')">
-								<img src="img/banners/3.jpg" alt="">
-							</div>
-							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-4" onclick="change_media(false, '4')">
-								<img src="img/banners/4.jpg" alt="">
-							</div>
-							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-5" onclick="change_media(false, '5')">
-								<img src="img/banners/5.jpg" alt="">
-							</div>
-							<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-52nahuy" onclick="change_media(false, '52nahuy')">
-								<img src="img/banners/52nahuy.jpg" alt="">
+						</div>
+						<div class="mainInfo__banner__interface__bottom__scroll">
+							<div class="mainInfo__banner__interface__bottom__medialist" id="game_medialist">
+								<div class="mainInfo__banner__interface__bottom__medialist__media mainInfo__banner__interface__bottom__medialist__media_active" id="media_block-1" onclick="change_media(false, '1')">
+									<img src="img/banners/1.jpg" alt="">
+								</div>
+								<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-10" onclick="change_media(false, '10')">
+									<img src="img/banners/10.jpg" alt="">
+								</div>
+								<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-3" onclick="change_media(false, '3')">
+									<img src="img/banners/3.jpg" alt="">
+								</div>
+								<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-4" onclick="change_media(false, '4')">
+									<img src="img/banners/4.jpg" alt="">
+								</div>
+								<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-5" onclick="change_media(false, '5')">
+									<img src="img/banners/5.jpg" alt="">
+								</div>
+								<div class="mainInfo__banner__interface__bottom__medialist__media" id="media_block-52nahuy" onclick="change_media(false, '52nahuy')">
+									<img src="img/banners/52nahuy.jpg" alt="">
+								</div>
 							</div>
 						</div>
 					</div>
